test/TestPhases/parser/invalid/nonASCII.blc
module

function blöd()

end
